Migrate Bolt to D4J 3.2.x