@@ -1,6 +1,6 @@
 package com.discordbolt.boltbot.discord.api.commands;
 
-import discord4j.core.DiscordClient;
+import discord4j.core.GatewayDiscordClient;
 import discord4j.core.event.domain.message.MessageCreateEvent;
 import discord4j.core.object.entity.Message;
 import java.util.Optional;
@@ -8,26 +8,26 @@ import reactor.core.publisher.Mono;
 
 class CommandListener {
 
-    private CommandManager manager;
+    private final CommandManager manager;
 
-    CommandListener(CommandManager manager, DiscordClient client) {
+    CommandListener(CommandManager manager, GatewayDiscordClient client) {
         this.manager = manager;
 
         client.getEventDispatcher()
                 .on(MessageCreateEvent.class)
                 .map(MessageCreateEvent::getMessage)
                 .filter(message -> message.getAuthor().map(author -> !author.isBot()).orElse(false))
-                .filter(message -> message.getContent().isPresent())
-                .filterWhen(message -> message.getGuild().map(guild -> message.getContent().get().length() > manager.getCommandPrefix(guild).length()))
+                .filter(message -> message.getContent().isEmpty())
+                .filterWhen(message -> message.getGuild().map(guild -> message.getContent().length() > manager.getCommandPrefix(guild).length()))
                 .subscribe(this::onCommand);
     }
 
     private void onCommand(Message message) {
         Mono.just(message)
-                .filterWhen(msg -> msg.getGuild().map(manager::getCommandPrefix).map(prefix -> msg.getContent().get().startsWith(prefix)))
+                .filterWhen(msg -> msg.getGuild().map(manager::getCommandPrefix).map(prefix -> msg.getContent().startsWith(prefix)))
                 .flatMap(msg -> msg.getGuild()
                         .map(manager::getCommandPrefix)
-                        .map(prefix -> msg.getContent().get().substring(prefix.length()))
+                        .map(prefix -> msg.getContent().substring(prefix.length()))
                         .map(rawCommand -> manager.getCommands()
                                 .stream()
                                 .filter(command -> command.getCommands().size() <= rawCommand.split(" ").length)
@@ -43,7 +43,7 @@ class CommandListener {
 
         for (int i = 0; i < customCommand.getCommands().size(); i++) {
             if (i == 0) {  // Checking the base command
-                if (!(customCommand.getCommands().get(0).equalsIgnoreCase(userBaseCommand) || (customCommand.getAliases().size() > 0 && customCommand.getAliases().stream().anyMatch(a -> a.equalsIgnoreCase(userBaseCommand))))) {
+                if (!(customCommand.getCommands().getFirst().equalsIgnoreCase(userBaseCommand) || (!customCommand.getAliases().isEmpty() && customCommand.getAliases().stream().anyMatch(a -> a.equalsIgnoreCase(userBaseCommand))))) {
                     return false;
                 }
             } else {  // Check the sub commands
